# word-pany

./: .gitignore  LICENSE  README.md  index.html  vite.config.ts  项目改进清单.md
scripts/: build-incremental.js  release-incremental.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  software_vocabulary.xml
src-tauri/src/: commands.rs  main.rs
src-tauri/src/models/: mod.rs  settings.rs  word.rs
src-tauri/src/services/: learning.rs  mod.rs  tts.rs  xml_parser.rs
src-tauri/src/utils/: config.rs  hotkey.rs  mod.rs
src/components/: HotkeyEditor.vue  ProgressBar.vue  SearchBox.vue  ThemeSelector.vue  WordCard.vue
src/composables/: useClipboard.ts  useHotkeys.ts  useIncrementalUpdater.ts  useNotifications.ts  useProgress.ts  useSearch.ts  useSimpleUpdater.ts  useTheme.ts  useUnifiedUpdater.ts  useUpdater.ts
src/router/: index.ts
src/stores/: settingsStore.ts  wordStore.ts
src/styles/: theme.scss  variables.scss  win11.scss
src/types/: settings.ts  word.ts
src/views/: MainView.vue  SettingsView.vue
